@@ -204,8 +204,9 @@ enum {
   SPVM_OP_C_FLAG_FIELD_ACCESS_WEAKEN = 1
 };
 enum {
-  // FIELD_ACCESS flag
-  SPVM_OP_C_FLAG_ARRAY_ACCESS_WEAKEN = 1
+  // ARRAY_ACCESS flag
+  SPVM_OP_C_FLAG_ARRAY_ACCESS_WEAKEN = 1,
+  SPVM_OP_C_FLAG_ARRAY_ACCESS_CONST = 2,
 };
 
 /* Binary operation */
