@@ -1,0 +1,7 @@
+package TestCase::CompileError::String::CharacterAssign {
+  sub main : int () {
+    my $string = "abc";
+    
+    $string->[0] = 'd';
+  }
+}
