@@ -13,6 +13,7 @@ use SPVM 'TestCase::String';
 my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
 {
+  ok(TestCase::String->string_access);
   ok(TestCase::String->string_length);
   ok(TestCase::String->basic);
 }
